2008-05-06  Richard Hult  <richard@imendio.com>

	* gtk-osx-build-setup.sh: Add script to get jhbuild and jhbuild
	config from svn and install them.

	* jhbuildrc-gtk-osx-cfw-10.4:
	* jhbuildrc-gtk-osx-fw-10.4: Change the checkout/inst directories.

2008-05-04  Richard Hult  <richard@imendio.com>

	* jhbuildrc-gtk-osx: Set -I flags in CPPFLAGS, not CFLAGS.

2008-05-04  Richard Hult  <richard@imendio.com>

	* jhbuildrc-gtk-osx-cfw-10.4:
	* jhbuildrc-gtk-osx-fw-10.4: Skip pyxml and set PERL and PYTHON
	environment variables to ensure we use the system versions instead
	of from macports.

2008-05-03  Richard Hult  <richard@imendio.com>

	* jhbuildrc-gtk-osx: Only add framework paths if they exist.

2008-05-03  Richard Hult  <richard@imendio.com>

	* gtk-osx-random.modules: Fix up dependencies a bit.
	
	* gtk-osx-webkit-deps.modules: Add libsoup, not used for
	now. Tweak the webkit setup, still doesn't work though.
	
	* jhbuildrc-gtk-osx-cfw-10.4: Disable some more modules, we don't
	use them (yet).

	* jhbuildrc-gtk-osx-fw-10.4: Add setup for building against
	frameworks.

2008-05-03  Richard Hult  <richard@imendio.com>

	* gtk-osx-bootstrap.modules: Update fake packages for docbook and
	gnome-doc-utils to add clean targets.
	- Also update the jpeg patch to support make clean.

2008-05-03  Richard Hult  <richard@imendio.com>

	* gtk-osx.modules: Add patch to pixman to disable gtk tests.

2008-05-01  Richard Hult  <richard@imendio.com>

	* jhbuildrc-gtk-osx:
	* jhbuildrc-gtk-osx-cfw-10.4: Fix bug introduced in the
	refactoring.

2008-05-01  Richard Hult  <richard@imendio.com>

	* jhbuildrc-gtk-osx:
	* jhbuildrc-gtk-osx-fw: Split out the 10.4 SDK setup and add as a
	function in the base rc file.

2008-05-01  Richard Hult  <richard@imendio.com>

	* jhbuildrc-gtk-osx: Set ACLOCAL_FLAGS if necessary.

2008-04-27  Richard Hult  <richard@imendio.com>

	* gtk-osx.modules: Include pango modules as builtin ones.

	* jhbuildrc-gtk-osx: Tweak the prompt stuff.
